--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
  
-<p>For serious business or acquisition inquiries, or technical support: hello@youhava.com</p>
+<p>For serious business or acquisition inquiries, or technical support: hello+youhava@trouserapps.com</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a>© YouHava</a></span>
